--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ariel_portfolio",
   "version": "0.1.0",
-  "homepage": "http://arirockart.com.ar/",
+  "homepage": "http://arirockart.com.ar",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
